# court-detection

./: .env.dist  .gitignore  README.md  README.rst  landmark-tool.patch  pyproject.toml
court_detection/: env.py  model.py  predict.py  predict_image.py  train.py  util.py
court_detection/consts/: train_phase.py
court_detection/data/: data_set.py  loader.py
court_detection/data/transforms/: __init__.py  grayscale.py  horizontal_flip.py  normalize.py  random_erasing.py  resize.py  squaring.py  to_tensor.py  vertical_flip.py
court_detection/data/types/: marked_image.py
court_detection/legacy/: court_fitting.py  line_detector.py
court_detection/models/: resnet.py  state.py  vit.py
court_detection/transforms/: resize.py
court_detection/types/: train_data.py
court_detection/utils/: coord.py
scripts/: predict.py  predict_image.py  predict_single_image.py  train.py
tests/: test_court_detection.py  test_draw_landmarks.py  test_point_loss.py
