[tool.poetry]
name = "court_detection"
version = "1.0.0"
description = ""
authors = ["oroshi <oroshinekko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.9"
torch = "^1.13.0"
torchvision = "^0.14.1"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
tensorboard = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"